--- a/Thesis.tex
+++ b/Thesis.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,12pt,oneside]{book}
+\documentclass[a4paper,12pt]{book}
 
 \makeatletter
 \def\input@path{{Chapters}}
@@ -9,9 +9,11 @@
 
 \begin{document}
 
+
 \pagenumbering{alph}
 \input{CoverITA}
 %\input{CoverENG}
+\blankpage
 
 \newpage
 \pagenumbering{Roman}
