Added Nonabelian gauge theories up to the definition of covariant derivative

--- a/Thesis.tex
+++ b/Thesis.tex
@@ -10,14 +10,13 @@
 \begin{document}
 
 
-\pagenumbering{alph}
+\pagenumbering{Alph}
 \input{CoverITA}
 %\input{CoverENG}
-\blankpage
+\cleardoublepage
 
 \newpage
 \pagenumbering{Roman}
-\setcounter{page}{1}
 \input{Abstract}
 
 \newpage
@@ -28,7 +27,7 @@
 	\thispagestyle{empty}
 }
 
-\newpage
+\cleardoublepage
 \pagenumbering{arabic}
 \input{LatticeQCD}
 
