Finished Continuum YM, changed section title replacing QCD->YM, renamed cover files to fix compatibility with case insensitive OS

--- a/Thesis.tex
+++ b/Thesis.tex
@@ -11,8 +11,10 @@
 
 
 \pagenumbering{roman}
-\input{CoverITA}
-%\input{CoverENG}
+\input{CoverITAuc}
+\input{CoverIta}
+%\input{CoverENGuc}
+%\input{CoverEng}
 \cleardoublepage
 
 \newpage
