--- a/Thesis.tex
+++ b/Thesis.tex
@@ -23,7 +23,7 @@
 
 \newpage
 {
-	\hypersetup{linkcolor=black,linktoc=page}
+	\hypersetup{linkcolor=black}
 %	\setcounter{tocdepth}{1}
 	\tableofcontents
 	\thispagestyle{empty}
