Removed apostrophes from labels in order to extend compatibility to biber. Added Weinberg, Peskin, Kaku and Ramond books

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -440,7 +440,52 @@
       publisher = "Harvard University Press, Cambridge",
 }
 
+@book{peskin1995introduction,
+    title       =   {An Introduction To Quantum Field Theory},
+    author      =   {Peskin, M.E. and Schroeder, D.V.},
+    isbn        =   {9780813345437},
+    series      =   {Frontiers in Physics},
+    url         =   {https://books.google.it/books?id=EVeNNcslvX0C},
+    year        =   {1995},
+    publisher   =   {Avalon Publishing}
+}
+
+@book{weinberg1995quantum,
+    title       =   {The Quantum Theory of Fields},
+    author      =   {Weinberg, S.},
+    number      =   {v. 2},
+    isbn        =   {9780521550024},
+    lccn        =   {95002782},
+    series      =   {The Quantum Theory of Fields 3 Volume Hardback Set},
+    url         =   {https://books.google.it/books?id=48xXMF1oHxkC},
+    year        =   {1995},
+    publisher   =   {Cambridge University Press}
+}
+
+@book{kaku1993quantum,
+    title       =   {Quantum Field Theory: A Modern Introduction},
+    author      =   {Kaku, M.},
+    isbn        =   {9780195091588},
+    lccn        =   {92027704},
+    url         =   {https://books.google.it/books?id=4mOMcRFYnzQC},
+    year        =   {1993},
+    publisher   =   {Oxford University Press}
+}
+
+@book{ramond1997field,
+    title       =   {Field Theory: A Modern Primer},
+    author      =   {Ramond, P.},
+    isbn        =   {9780201304503},
+    lccn        =   {90000910},
+    series      =   {Frontiers in Physics},
+    url         =   {https://books.google.it/books?id=EJ4\_BAAAQBAJ},
+    year        =   {1997},
+    publisher   =   {Avalon Publishing}
+}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%% END OF BOOKS %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -1337,7 +1382,7 @@
       SLACcitation   = "%%CITATION = HEP-PH/9608322;%%",
 }
 
-@article{d'Enterria:2009am,
+@article{dEnterria:2009am,
       author         = "d'Enterria, David",
       title          = "{Jet quenching}",
       year           = "2009",
@@ -1411,7 +1456,7 @@
       SLACcitation   = "%%CITATION = HEP-PH/0106240;%%",
 }
 
-@article{D'Eramo:2010ak,
+@article{DEramo:2010ak,
       author         = "D'Eramo, Francesco and Liu, Hong and Rajagopal, Krishna",
       title          = "{Transverse Momentum Broadening and the Jet Quenching
                         Parameter, Redux}",
@@ -1849,7 +1894,7 @@
       SLACcitation   = "%%CITATION = ARXIV:1302.5970;%%",
 }
 
-@article{D'Eramo:2012jh,
+@article{DEramo:2012jh,
       author         = "D'Eramo, Francesco and Lekaveckas, Mindaugas and Liu,
                         Hong and Rajagopal, Krishna",
       title          = "{Momentum Broadening in Weakly Coupled Quark-Gluon Plasma
@@ -15930,7 +15975,7 @@
      SLACcitation  = "%%CITATION = HEP-LAT/9908006;%%"
 }
 
-@article{D'Elia:2002gd,
+@article{DElia:2002gd,
      author    = "D'Elia, Massimo and Lombardo, Maria-Paola",
      title     = "{Finite density QCD via imaginary chemical potential}",
      journal   = "Phys. Rev.",
@@ -15943,7 +15988,7 @@
      SLACcitation  = "%%CITATION = HEP-LAT/0209146;%%"
 }
 
-@article{D'Elia:2004at,
+@article{DElia:2004at,
      author    = "D'Elia, Massimo and Lombardo, Maria Paola",
      title     = "{QCD thermodynamics from an imaginary mu(B): Results on the
                   four flavor  lattice model}",
@@ -22909,7 +22954,7 @@ Mathematics, pages 556--588 (Springer, 1985)}",
       SLACcitation   = "%%CITATION = ARXIV:1208.4784;%%",
 }
 
-@article{D'Hoker:2002aw,
+@article{DHoker:2002aw,
       author         = "D'Hoker, Eric and Freedman, Daniel Z.",
       title          = "{Supersymmetric gauge theories and the AdS / CFT
                         correspondence}",
@@ -24207,7 +24252,7 @@ Mathematics, pages 556--588 (Springer, 1985)}",
       SLACcitation   = "%%CITATION = HEP-TH/0407068;%%",
 }
 
-@article{D'Elia:2003gr,
+@article{DElia:2003gr,
       author         = "D'Elia, Massimo",
       title          = "{Field theoretical approach to the study of theta
                         dependence in Yang-Mills theories on the lattice}",
@@ -25247,7 +25292,7 @@ Mathematics, pages 556--588 (Springer, 1985)}",
       SLACcitation   = "%%CITATION = HEP-PH/9410360;%%",
 }
 
-@article{D'Elia:2012vv,
+@article{DElia:2012vv,
       author         = "D'Elia, Massimo and Negro, Francesco",
       title          = "{$\theta$ dependence of the deconfinement temperature in
                         Yang-Mills theories}",
@@ -26333,7 +26378,7 @@ Mathematics, pages 556--588 (Springer, 1985)}",
       SLACcitation   = "%%CITATION = HEP-TH/9810015;%%",
 }
 
-@article{O'Connell:1995wf,
+@article{OConnell:1995wf,
       author         = "O'Connell, Heath Bland and Pearce, B.C. and Thomas,
                         Anthony William and Williams, Anthony Gordon",
       title          = "{$\rho - \omega$ mixing, vector meson dominance and the
@@ -31062,7 +31107,7 @@ Mathematics, pages 556--588 (Springer, 1985)}",
       SLACcitation   = "%%CITATION = HEP-LAT/0611014;%%",
 }
 
-@article{D'Elia:2012tr,
+@article{DElia:2012tr,
       author         = "D'Elia, Massimo",
       title          = "{Lattice QCD Simulations in External Background Fields}",
       journal        = "Lect. Notes Phys.",
@@ -34006,7 +34051,7 @@ Mathematics, pages 556--588 (Springer, 1985)}",
       SLACcitation   = "%%CITATION = ARXIV:0711.1347;%%"
 }
 
-@article{O'Connor:2007ea,
+@article{OConnor:2007ea,
       author         = "O'Connor, Denjoe and S{\"a}mann, Christian",
       title          = "{Fuzzy Scalar Field Theory as a Multitrace Matrix Model}",
       journal        = "JHEP",
@@ -34339,7 +34384,7 @@ Mathematics, pages 556--588 (Springer, 1985)}",
       SLACcitation   = "%%CITATION = ARXIV:0712.3011;%%"
 }
 
-@article{O'Connor:2006wv,
+@article{OConnor:2006wv,
       author         = "O'Connor, Denjoe and Ydri, Badis",
       title          = "{Monte Carlo Simulation of a NC Gauge Theory on The Fuzzy
                         Sphere}",
@@ -34635,7 +34680,7 @@ Mathematics, pages 556--588 (Springer, 1985)}",
       SLACcitation   = "%%CITATION = ARXIV:1311.5607;%%"
 }
 
-@article{O'Connor:2013rla,
+@article{OConnor:2013rla,
       author         = "O'Connor, Denjoe and Dolan, Brian P. and Vachovski,
                         Martin",
       title          = "{Critical Behaviour of the Fuzzy Sphere}",
@@ -38215,7 +38260,7 @@ Mathematics, pages 556--588 (Springer, 1985)}",
       SLACcitation   = "%%CITATION = NUPHA,B320,135;%%"
 }
 
-@article{D'Adda:2005zk,
+@article{DAdda:2005zk,
       author         = "D'Adda, Alessandro and Kanamori, Issaku and Kawamoto,
                         Noboru and Nagata, Kazuhiro",
       title          = "{Exact extended supersymmetry on a lattice: Twisted N=2
@@ -38581,7 +38626,7 @@ Mathematics, pages 556--588 (Springer, 1985)}",
       SLACcitation   = "%%CITATION = ARXIV:1405.0644;%%"
 }
 
-@article{Aref'eva:1998mk,
+@article{Arefeva:1998mk,
       author         = "Aref'eva, I. {\relax Ya}. and Koshelev, A. S. and
                         Medvedev, P. B.",
       title          = "{Chaos order transition in Matrix theory}",
@@ -39550,7 +39595,7 @@ Mathematics, pages 556--588 (Springer, 1985)}",
       SLACcitation   = "%%CITATION = ARXIV:1201.1516;%%"
 }
 
-@article{D'Elia:2015rwa,
+@article{DElia:2015rwa,
       author         = "D'Elia, Massimo",
       title          = "{Lattice QCD with purely imaginary sources at zero and
                         non-zero temperature}",
@@ -40658,7 +40703,7 @@ Mathematics, pages 556--588 (Springer, 1985)}",
       SLACcitation   = "%%CITATION = HEP-LAT/0203020;%%",
 }
 
-@article{Prokof'ev:2001zz,
+@article{Prokofev:2001zz,
       author         = "Prokof'ev, Nikolay and Svistunov, Boris",
       title          = "{Worm Algorithms for Classical Statistical Models}",
       journal        = "Phys. Rev. Lett.",
@@ -41270,7 +41315,7 @@ Mathematics, pages 556--588 (Springer, 1985)}",
       SLACcitation   = "%%CITATION = HEP-LAT/0702019;%%"
 }
 
-@article{D'Alessandro:2006ug,
+@article{DAlessandro:2006ug,
       author         = "D'Alessandro, A. and D'Elia, Massimo and Tagliacozzo, L.",
       title          = "{Dual superconductivity and vacuum properties in
                         Yang-Mills theories}",
