Applied corrections from M.P. as of 07/05/2023

--- a/Thesis.tex
+++ b/Thesis.tex
@@ -12,7 +12,7 @@
 
 \pagenumbering{roman}
 \input{CoverITAuc}
-\input{CoverIta}
+%\input{CoverIta}
 %\input{CoverENGuc}
 %\input{CoverEng}
 \cleardoublepage
