added DeGrand DeTar Lattice field theory book

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -483,6 +483,12 @@
     publisher   =   {Avalon Publishing}
 }
 
+@book{DeGrand:2006zz,
+    author      =   {DeGrand, Thomas and Detar, Carleton E.},
+    title       =   {Lattice methods for quantum chromodynamics},
+    year        =   {2006}
+}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%% END OF BOOKS %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
