Added Wick rotation article.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -75360,3 +75360,17 @@ Mathematics, pages 556--588 (Springer, 1985)}",
     pages = "056132",
     year = "2005"
 }
+
+@article{SCHLINGEMANN_1999,
+	doi        = {10.1142/s0129055x99000362},
+	url        = {https://doi.org/10.1142%2Fs0129055x99000362},
+	year       = 1999,
+	month      = {oct},
+	publisher  = {World Scientific Pub Co Pte Lt},
+	volume     = {11},
+	number     = {09},
+	pages      = {1151--1178},
+	author     = {DIRK SCHLINGEMANN},
+	title      = {{FROM} {EUCLIDEAN} {FIELD} {THEORY} {TO} {QUANTUM} {FIELD} {THEORY}},
+	journal    = {Reviews in Mathematical Physics}
+}
