Finished 2nd frame

--- a/Presetation/Presentation.tex
+++ b/Presetation/Presentation.tex
@@ -41,25 +41,39 @@
   \begin{columns}[t]
     \column{0.5\textwidth}
     \centering
+\onslide<1->
     Perturbative\\
-    \vspace{\baselineskip}
+    \vspace{0.5\baselineskip}
     \includegraphics[height=0.4\textwidth]{gluonfd.png}\\
-    \vspace{\baselineskip}
+    \vspace{0.5\baselineskip}
     \begin{itemize}
-     \item pro
-     \item contro
+     \item Straightforward series expansion in powers of small $g$ $\Leftrightarrow$ Feynman diagrams with $n$ loops
+\onslide<2->
+     \item UV divergencies need to be eliminated
+\onslide<3->
+     \item Fails predicting quantities with essential singularities as $g\rightarrow0$
     \end{itemize}
     \column{0.5\textwidth}
     \centering
+\onslide<1->
     Non-Perturbative\\
-    \vspace{\baselineskip}
+    \vspace{0.5\baselineskip}
     \includegraphics[height=0.4\textwidth]{Glueball.png}\\
-    \vspace{\baselineskip}
+    \vspace{0.5\baselineskip}
     \begin{itemize}
-     \item pro
-     \item contro
+\onslide<4->
+     \item No straightforward approach
+\onslide<5->
+     \item Can have a natural cut-off for high momenta $\Rightarrow$ No UV divergencies
+\onslide<6->
+     \item Can predict quantities with essential singularities as $g\rightarrow0$
     \end{itemize}
   \end{columns}
 \end{frame}
+
+\begin{frame}
+  \frametitle{Lattice Field Theory}
+\end{frame}
+
 
 \end{document}
