Added Lattice Field theory description

--- a/Presetation/Settings.tex
+++ b/Presetation/Settings.tex
@@ -12,3 +12,6 @@
 \newcommand{\pr}[1]{\left(#1\right)}
 \newcommand{\prs}[1]{\left[#1\right]}
 \newcommand{\prc}[1]{\left\{#1\right\}}
+\newcommand{\C}{\mathbb{C}}
+\newcommand{\R}{\mathbb{R}}
+\newcommand{\Z}{\mathbb{Z}}
