--- a/Presetation/Presentation.tex
+++ b/Presetation/Presentation.tex
@@ -73,6 +73,42 @@
 
 \begin{frame}
   \frametitle{Lattice Field Theory}
+  \centering
+  \begin{columns}
+  \column{0.6\textwidth}
+\onslide<1->
+    \begin{block}{Definition: Lattice $\Lambda$}
+      $\Lambda =\left\{\left.\sum _{i=1}^{n}a_{i}e_{i}\;\right\vert \;a_{i}\in \mathbb {Z} \right\}$, $\prc{e_i}$ basis of $\R^n$
+    \end{block}
+    Hypercubic lattice: $\prc{e_i}$ is the canonical basis of $\R^n$, $a$ is called \emph{lattice spacing}.\\
+\onslide<2->
+    Basic idea: fields can take values only in given parts of the lattice, $x\rightarrow n\in\Lambda$.
+\onslide<3->
+    Examples:
+    \begin{itemize}
+      \item Scalar fields $\Phi(x)\rightarrow\Phi(n)$ on sites
+\onslide<4->
+      \item Vector fields $A_\mu(x)\rightarrow A_\mu(n)$ on links
+\onslide<5->
+      \item Object with $k$ indices on $k$-symplexes
+    \end{itemize}
+\onslide<6->
+    \begin{alertblock}{Attention!}
+      Spinorial fields are trickier.
+    \end{alertblock}
+  
+  \column{0.01\textwidth}
+  
+  \column{0.39\textwidth}
+\onslide<1->
+    \centering
+    \begin{figure}
+      \includegraphics<1-2>[width=\textwidth]{Lattice.png}
+      \includegraphics<3>[width=\textwidth]{LatticeScalar.png}
+      \includegraphics<4->[width=\textwidth]{LatticeGauge.png}
+      \caption{Example of a cubic lattice in $\R^3$.}
+    \end{figure}
+  \end{columns}
 \end{frame}
 
 
