Added Polyakov loops, fixed gauge vector image, working bibliography

--- a/Presetation/Libraries.tex
+++ b/Presetation/Libraries.tex
@@ -1,2 +1,8 @@
 \usepackage{physics}
 \usepackage{xcolor}
+\usepackage{dsfont}
+\usepackage[backend=biber,style=numeric-comp,sorting=none]{biblatex}
+\usepackage{hyperref}
+\usepackage[T1]{fontenc}
+\usepackage{comment}
+\usepackage{tikz}
