--- a/Presetation/Settings.tex
+++ b/Presetation/Settings.tex
@@ -6,7 +6,9 @@
 \date{\today}
 
 \setbeamertemplate{navigation symbols}{} % Uncomment to remove navigation buttons
- 
+
+\addbibresource{Bibliography.bib}
+
 \graphicspath{{./pics}}
 
 \newcommand{\pr}[1]{\left(#1\right)}
@@ -15,3 +17,5 @@
 \newcommand{\C}{\mathbb{C}}
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\Z}{\mathbb{Z}}
+\newcommand{\dV}{\int\dd^4x}
+\newcommand{\id}{\mathds{1}}
