Added Rotational Invariance Restoration

--- a/Presetation/Bibliography.bib
+++ b/Presetation/Bibliography.bib
@@ -7,3 +7,17 @@
         volume  = "3224",
         url     = "https://digitalcommons.fiu.edu/etd/3224?utm_source=digitalcommons.fiu.edu%2Fetd%2F3224&utm_medium=PDF&utm_campaign=PDFCoverPages"
 }
+
+@article{Lang:1982tj,
+      author         = "Lang, C. B. and Rebbi, C.",
+      title          = "{Potential and Restoration of Rotational Symmetry in
+                        SU(2) Lattice Gauge Theory}",
+      journal        = "Phys. Lett.",
+      volume         = "B115",
+      year           = "1982",
+      pages          = "137",
+      doi            = "10.1016/0370-2693(82)90813-9",
+      note           = "[, 322 (1982)]",
+      reportNumber   = "CERN-TH-3270",
+      SLACcitation   = "%%CITATION = PHLTA,B115,137;%%"
+}
