--- a/Presetation/Presentation.tex
+++ b/Presetation/Presentation.tex
@@ -256,10 +256,30 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Rotational Invariance Restoration}
-  
+  \frametitle{Rotational Invariance Restoration - Lang and Rebbi}
+  Equipotential surfaces become spheres as the continuum limit is approached.
+  \begin{figure}
+    \includegraphics[width=.8\textwidth]{LangRebbi.png}
+    \caption{Restoration of rotational invariance from (a) $\beta=2$, $n_s=8$, $n_t=4$ to (b)$\beta=2.25$, $n_s=16$, $n_t=6$; the curves represent equipotential curves. \cite{Lang:1982tj}}
+  \end{figure}
 \end{frame}
 
+\begin{frame}
+  \frametitle{Rotational Invariance Restoration}
+  Values of $\beta$ are slightly different from Lang and Rebbi's because $a(\beta)\simeq\Lambda e^{-b_0\beta}$, with $\Lambda$, $b_0>0$.
+  \begin{columns}
+  \column{0.4\textwidth}
+    \begin{figure}
+      \includegraphics[width=\textwidth]{plots/XY_Plane_nt4_ns8_beta2.20_copied.png}
+      \caption{Potential from $\beta=2.20$, $n_s=8$, $n_t=4$.}
+    \end{figure}
+  \column{0.4\textwidth}
+    \begin{figure}
+      \includegraphics[width=\textwidth]{plots/XY_Plane_nt6_ns16_beta2.35_copied.png}
+      \caption{Potential from $\beta=2.35$, $n_s=16$, $n_t=6$.}
+    \end{figure}
+  \end{columns}
+\end{frame}
 
 
 \begin{frame}
