Added Higher Symmetry Lattices

--- a/Presentation/Bibliography.bib
+++ b/Presentation/Bibliography.bib
@@ -21,3 +21,61 @@
       reportNumber   = "CERN-TH-3270",
       SLACcitation   = "%%CITATION = PHLTA,B115,137;%%"
 }
+
+@article{Celmaster:1982ht,
+      author         = "Celmaster, William",
+      title          = "{Gauge Theories on the Body - Centered Hypercubic
+                        Lattice}",
+      journal        = "Phys. Rev.",
+      volume         = "D26",
+      pages          = "2955",
+      doi            = "10.1103/PhysRevD.26.2955",
+      year           = "1982",
+      reportNumber   = "NUB-2561",
+      SLACcitation   = "%%CITATION = PHRVA,D26,2955;%%",
+}
+
+@article{Neuberger:1987kt,
+    author = "Neuberger, Herbert",
+    title = "{SPINLESS FIELDS ON F(4) LATTICES}",
+    reportNumber = "RU-35-87",
+    doi = "10.1016/0370-2693(87)91623-6",
+    journal = "Phys. Lett. B",
+    volume = "199",
+    pages = "536--540",
+    year = "1987"
+}
+
+@online{f4image,
+      url   = "https://en.wikipedia.org/wiki/F4_%28mathematics%29"
+}
+
+@article{Panero:2009tv,
+     author    = "Panero, Marco",
+     title     = "{Thermodynamics of the QCD plasma and the large-N limit}",
+     journal   = "Phys. Rev. Lett.",
+     volume    = "103",
+     year      = "2009",
+     pages     = "232001",
+     eprint    = "0907.3719",
+     archivePrefix = "arXiv",
+     primaryClass  =  "hep-lat",
+     doi       = "10.1103/PhysRevLett.103.232001",
+     SLACcitation  = "%%CITATION = 0907.3719;%%"
+}
+
+@article{Mykkanen:2012ri,
+      author         = "Mykk{\"a}nen, Anne and Panero, Marco and Rummukainen, Kari",
+      title          = "{Casimir scaling and renormalization of Polyakov loops in
+                        large-N gauge theories}",
+      journal        = "JHEP",
+      volume         = "1205",
+      pages          = "069",
+      doi            = "10.1007/JHEP05(2012)069",
+      year           = "2012",
+      eprint         = "1202.2762",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-lat",
+      reportNumber   = "HIP-2012-05-TH, NSF-KITP-12-013",
+      SLACcitation   = "%%CITATION = ARXIV:1202.2762;%%",
+}
