--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -75374,3 +75374,14 @@ Mathematics, pages 556--588 (Springer, 1985)}",
 	title      = {{FROM} {EUCLIDEAN} {FIELD} {THEORY} {TO} {QUANTUM} {FIELD} {THEORY}},
 	journal    = {Reviews in Mathematical Physics}
 }
+
+@article{Neuberger:1987kt,
+    author = "Neuberger, Herbert",
+    title = "{SPINLESS FIELDS ON F(4) LATTICES}",
+    reportNumber = "RU-35-87",
+    doi = "10.1016/0370-2693(87)91623-6",
+    journal = "Phys. Lett. B",
+    volume = "199",
+    pages = "536--540",
+    year = "1987"
+}
