Added Work in progress slide

--- a/Presentation/Presentation.tex
+++ b/Presentation/Presentation.tex
@@ -370,16 +370,17 @@
 \begin{frame}
   \frametitle{Work in Progress}
   \begin{columns}
-  \column{0.7\textwidth}
+  \column{0.5\textwidth}
 \onslide<1->
     \begin{itemize}
     \item Implement the $F_4$ lattice in the simulation program and make efficiency studies;
-    \vspace{6\baselineskip}
+    \vspace{5\baselineskip}
 \onslide<2->
     \item Make a rotational invariance study on the new lattice, hoping to get better results than the Simple Hypercubic lattice.
     \end{itemize}
     
 \onslide<1->
+  \column{0.1\textwidth}
   \column{0.3\textwidth}
     \includegraphics[width=\textwidth]{F4_root_lattice.png}\\
     \vspace{\baselineskip}
@@ -391,7 +392,7 @@
 \begin{frame}
   \centering
   \Huge
-  Grazie per l'attenzione!
+  Thank you for your attention
 \end{frame}
 
 \begin{frame}[allowframebreaks]
