Fixed error on frame 12

--- a/Presentation/Presentation.tex
+++ b/Presentation/Presentation.tex
@@ -342,7 +342,7 @@
         \item The $24$ dual roots (coroots) are:
         \begin{itemize}
           \item[\ding{109}] The $8$ possible permutations of $\pr{\pm1,0,0,0}$
-          \item[\ding{109}] The $16$ possible permutations of $\pr{\pm\frac12,\pm\frac12,\pm\frac12,\pm\frac12}$
+          \item[\ding{109}] The $16$ vectors of the form $\pr{\pm\frac12,\pm\frac12,\pm\frac12,\pm\frac12}$
         \end{itemize}
       \end{itemize}
 \onslide<4->
