--- a/Presentation/Settings.tex
+++ b/Presentation/Settings.tex
@@ -4,6 +4,7 @@
 \author{Marco Aliberti}
 \institute[]{Università degli Studi di Torino}
 \date{\today}
+%\date{\formatdate{13}{07}{2023}}
 
 \setbeamertemplate{navigation symbols}{} % Uncomment to remove navigation buttons
 
