Added Scalar fields on the SH lattice.

--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -489,6 +489,16 @@
     year        =   {2006}
 }
 
+@book{coxeter2012regular,
+  title={Regular Polytopes},
+  author={Coxeter, H.S.M.},
+  isbn={9780486141589},
+  series={Dover Books on Mathematics},
+  url={https://books.google.it/books?id=2ee7AQAAQBAJ},
+  year={2012},
+  publisher={Dover Publications}
+}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%% END OF BOOKS %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
